force-app/main/default/objects/Payer__c/Payer__c.object-meta.xml
<CustomObject>
    <description>Insurance payer / health plan organization. Reference data; organization-wide default is Public Read Only.</description>
    <label>Payer</label>
    <nameField>
        <label>Payer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>