force-app/main/default/objects/Payer__c/fields/Claim_Filing_Code__c.field-meta.xml
<CustomField>
    <fullName>Claim_Filing_Code__c</fullName>
    <description>X12 claim filing indicator, such as CI, MB, or MC. Overrides the default derived from payer type.</description>
    <label>Claim Filing Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>