force-app/main/default/objects/Payer__c/fields/Payer_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Payer_Identifier__c</fullName>
    <description>Clearinghouse or CMS payer ID used in eligibility requests.</description>
    <externalId>true</externalId>
    <label>Payer Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>