force-app/main/default/objects/Payer__c/listViews/Active_Payers.listView-meta.xml
<ListView>
    <fullName>Active_Payers</fullName>
    <columns>NAME</columns>
    <columns>Payer_Identifier__c</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Payers</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>