force-app/main/default/objects/Payer__c/listViews/All_Payers.listView-meta.xml
<ListView>
    <fullName>All_Payers</fullName>
    <columns>NAME</columns>
    <columns>Payer_Identifier__c</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Payers</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>